--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>formulario de cadastro</title>
-        <link rel="stylesheet" href="./css/style.css">
-        <script src="js/validation.js" defer></script>
+        <link rel="stylesheet" href="style.css">
+        <script src="validation.js" defer></script>
     </head>
     <body>
        <div class="container">  
@@ -35,7 +35,7 @@
             </fieldset>
 
             <fieldset>
-              <button name="submit" type="submit" id="contact-submit" data-submit="...Enviando">Enviar</button>
+              <button onclick="exibirAlerta()" name="submit" type="submit" id="contact-submit" data-submit="...Enviando">Enviar</button>
             </fieldset>
             
           </form>
